fix overflow

--- a/src/features/home/InfoGraphic.scss
+++ b/src/features/home/InfoGraphic.scss
@@ -2,6 +2,7 @@
 
 .home-info-graphic {
   background-color: #1f285c;
+  overflow: hidden;
   #github-fork-me {
     position: absolute;
     right: 2px;
